--- a/.env.example
+++ b/.env.example
@@ -53,5 +53,8 @@ EMAIL_SERVER_PASS=your-app-password
 # Resend (alternative email service)
 EMAIL_RESEND_API_KEY=your_resend_api_key
 
+# HubSpot CRM Integration
+HUBSPOT_API_KEY=your_hubspot_private_app_access_token
+
 # License System Configuration
 LICENSE_ENCRYPTION_KEY=your-32-character-encryption-key-here
