--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "postinstall": "prisma generate && content-collections build",
     "stripe:listen": "stripe listen --forward-to http://localhost:3000/api/stripe/webhook",
     "setup:license": "node setup-license-system.js",
-    "test:license": "npx tsx tests/license-system.test.ts"
+    "test:license": "npx tsx tests/license-system.test.ts",
+    "sync:hubspot": "node sync-contacts-to-hubspot.js",
+    "test:hubspot": "npx tsx test-hubspot-connection.ts"
   },
   "dependencies": {
     "@auth/prisma-adapter": "2.8.0",
