--- a/package.json
+++ b/package.json
@@ -108,6 +108,7 @@
     "react-dropzone": "14.3.8",
     "react-email": "3.0.7",
     "react-hook-form": "7.54.2",
+    "react-icons": "^5.5.0",
     "react-image-crop": "11.0.7",
     "react-is": "19.0.0",
     "react-remove-scroll": "2.6.3",
