--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "@stripe/stripe-js": "4.8.0",
     "@tanstack/react-table": "8.21.2",
     "@types/memory-cache": "0.2.6",
+    "@types/react-google-recaptcha": "^2.1.9",
     "@typeschema/zod": "0.14.0",
     "adm-zip": "^0.5.16",
     "bcryptjs": "3.0.2",
@@ -112,6 +113,7 @@
     "react-dom": "19.0.0",
     "react-dropzone": "14.3.8",
     "react-email": "3.0.7",
+    "react-google-recaptcha": "^3.1.0",
     "react-hook-form": "7.54.2",
     "react-icons": "^5.5.0",
     "react-image-crop": "11.0.7",
