Refactor application to replace "NTClipboard" with "Edgebic" across components, documentation, and email templates; add SettingsPage redirect to Profile.

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ntclipboard-web",
   "version": "1.0.0",
-  "description": "NTClipboard - The ultimate PDF to clipboard tool",
+  "description": "Edgebic- The ultimate PDF to clipboard tool",
   "private": true,
   "scripts": {
     "dev": "next dev",
